# ageness

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  REAL_WORLD_RESULTS.md  STATUS.md  pyproject.toml
benchmark/: models.py  run_comparison.py  run_verify_fix.py
benchmark/core/: runner.py
benchmark/docs/: overview.md
benchmark/metrics/: evaluator.py
benchmark/simulator/: generator.py
benchmark/systems/: hybrid_retrieval.py  reconstructed_state.py  transcript_replay.py
benchmark/tests/: conftest.py  test_hybrid_retrieval.py  test_metrics_evaluator.py  test_models.py  test_reconstructed_state.py  test_runner.py  test_runner_phase2.py  test_simulator.py  test_transcript_replay.py  test_visualization.py
benchmark/visualization/: reporter.py
docs/: active_context.md  distillation.md  reconstruction.md  retrieval.md  salience.md  workflow.md
src/ageness/cognition/active_context/: builder.py
src/ageness/cognition/distillation/: pipeline.py
src/ageness/cognition/reconstruction/: reconstructor.py
src/ageness/cognition/retrieval/: hybrid.py
src/ageness/cognition/salience/: engine.py
src/ageness/graph/: workflow.py
src/ageness/memory/: models.py
src/harness/cognition/active_context/: builder.py
src/harness/cognition/distillation/: pipeline.py
src/harness/cognition/reconstruction/: reconstructor.py
src/harness/graph/: workflow.py
tests/: run_demo.py  test_active_context.py  test_distillation.py  test_real_world.py  test_reconstruction.py  test_retrieval.py  test_salience.py  test_workflow.py
(+2 files in other folders)
