[project]
name = "ageness"
version = "0.1.0"
description = "Cognitive memory layer on LangGraph — Active Context Builder, Async Distillation, Memory Salience, Hybrid Retrieval, Cognitive State Reconstruction"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.0,<2.0",
    "langchain-core>=1.0,<2.0",
    "langgraph>=1.0,<2.0",
    "langsmith>=0.3.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
openai = ["langchain-openai"]
anthropic = ["langchain-anthropic"]
postgres = [
    "langgraph-checkpoint-postgres",
    "langgraph-store-postgres",
]
chroma = ["langchain-chroma"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
